UI design updated (missin: remove buttons dynamically and  textbox

--- a/index.html
+++ b/index.html
@@ -19,16 +19,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="sketch.js"></script>
+
     <meta charset="utf-8" />
   </head>
   <body>
+    
     <p id="status"></p>
+    <div class="container">
+      <div class="child">
+      <header><h1>My Game</h1> </header>
+    </div>
+      <div>
+        <button id="create-room-button"> Create Room </button>
+      </div>
+      <div >
+        <button id="join-room-button"> Join Room </button> <br>
+      </div>
+       <div>
+        <input id="room-code-input" type="text" placeholder="Enter your code here..."> 
+        <p id="room-code-p"></p>
+      </div>
+    </div>
+
+    
     <button id="start-button"> Start </button>
-    <button id="create-room-button"> Create Room </button>
-    <button id="join-room-button"> Join Room </button> <br>
-    <input id="room-code-input" type="text"> 
-    <p id="room-code-p"></p>
-    <div id="p5sketch"></div>
+   
+    <div id="p5sketch" class="container"></div>
     <script src="sketch.js"></script>
   </body>
 </html>
