Added Rooms and testing round mechanics

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <button id="create-room-button"> Create Room </button>
     <button id="join-room-button"> Join Room </button> <br>
     <input id="room-code-input" type="text"> 
-    <p id="room-code-p"></p>
+    <button id="left-choice-button"></button>
+    <button id="right-choice-button"></button>
+    <p id="message-p"></p>
     <div id="p5sketch"></div>
     <script src="sketch.js"></script>
   </body>
