Design done, just have to remove start and end buttons (and make the input bar disapear

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p id="status"></p>
     <div class="container">
       <div class="child">
-      <header><h1>My Game</h1> </header>
+      <header><h1>PoseArt!</h1> </header>
     </div>
       <div>
         <button id="create-room-button"> Create Room </button>
@@ -38,7 +38,7 @@
         <button id="join-room-button"> Join Room </button> <br>
       </div>
        <div>
-        <input id="room-code-input" type="text" placeholder="Enter your code here..."> 
+        <input id="room-code-input" type="text" placeholder="Enter your code here..." style="width: 500px;" > 
         <p id="room-code-p"></p>
       </div>
     </div>
